Fixed text overflow in the left column

--- a/WebEntry/src/components/AOIEditor/AOIEditorComponent.css
+++ b/WebEntry/src/components/AOIEditor/AOIEditorComponent.css
@@ -8,7 +8,7 @@
 }
 
 .AOIName {
-  fill: white;
+  /*fill: white;*/
 }
 
 .AOIShape {
